--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/😊.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000" />
+
+    <meta name="description" content="Have you been a good Bing?" />
+    <meta name="og:description" content="Have you been a good Bing?" />
+    <meta name="og:title" content="Good Bing" />
+    <meta name="og:image" content="/good-bing.png" />
+
     <title>Good Bing</title>
   </head>
   <body>
