--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/😊.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000" />
-
+    <meta name="theme-color" content="#fff" />
     <meta name="description" content="Have you been a good Bing?" />
     <meta name="og:description" content="Have you been a good Bing?" />
     <meta name="og:title" content="Good Bing" />
     <meta name="og:image" content="/good-bing.png" />
-
     <title>Good Bing</title>
   </head>
   <body>
