--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script
+      async
+      src="https://scripts.simpleanalyticscdn.com/latest.js"
+    ></script>
   </body>
 </html>
